--- a/templates/index-3.html
+++ b/templates/index-3.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>HomeoAyurCart - Ayerveda medicines</title>
+    <title>Bhavna Khakhara</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -52,7 +52,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="site-logo">
-                            <a href="index.html"><img src="{% static 'img/logo.png' %}" alt="Logo" style="width: 100%;"></a>
+                            <a href="index.html"><img src="{% static 'img/ThynkCafe.png' %}" alt="Logo" style="width: 100%;"></a>
                         </div>
                     </div>
                     <div class="col header-contact-serarch-column d-none d-lg-block">
