--- a/templates/index-3.html
+++ b/templates/index-3.html
@@ -52,7 +52,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="site-logo">
-                            <a href="index.html"><img src="{% static 'img/ThynkCafe.png' %}" alt="Logo" style="width: 100%;"></a>
+                            <a href="index.html"><img src="{% static '/static_in_env/img/ThynkCafe.png' %}" alt="Logo" style="width: 100%;"></a>
                         </div>
                     </div>
                     <div class="col header-contact-serarch-column d-none d-lg-block">
